🚑 Hotfix: fix dark mode

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -868,8 +868,6 @@
 }
 
 .dark-mode {
-    --tw-bg-opacity: 1;
-    background-color: rgba(17,24,39,var(--tw-bg-opacity));
 
     input, textarea{
         background-color: #1F2937 !important;
